# tinywav

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  tinywav.c  tinywav.h
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  workflow.yml
test/: TestCommon.hpp  main.cpp
test/scripts/: generate-vs2019-windows.bat  generate-vs2022-windows.bat  generate-xcode-macos.command
test/tests/: BasicTests.cpp  FileReadTests.cpp
